# Survey-Analysis-Code

./: .gitignore  README.md  SYSTEM_OVERVIEW.md  package-lock.json
survey-analysis-backend/: .env.example  Dockerfile  README.md  docker-compose.yml  inspect_db.py  list_models.py  migrate_db.py  pyproject.toml  reproduce_issue.py  test_llm.py  test_out.txt  test_out_2.txt
survey-analysis-backend/config/: settings.py
survey-analysis-backend/scripts/: demo_api.py
survey-analysis-backend/src/: main.py
survey-analysis-backend/src/analytics/interfaces/: api.py
survey-analysis-backend/src/analytics/internals/: correlation_engine.py  descriptive_stats.py  findings_generator.py  quality_summary.py  report_generator.py  repository.py
survey-analysis-backend/src/analytics/models/: orm.py
survey-analysis-backend/src/chat_assistant/interfaces/: api.py
survey-analysis-backend/src/chat_assistant/internals/: query_executor.py  query_translator.py  repository.py
survey-analysis-backend/src/chat_assistant/models/: orm.py
survey-analysis-backend/src/ingestion/interfaces/: api.py
survey-analysis-backend/src/ingestion/internals/: merge_engine.py  parser.py  repository.py  validator.py  version_detector.py
survey-analysis-backend/src/ingestion/models/: orm.py
survey-analysis-backend/src/quality/interfaces/: api.py
survey-analysis-backend/src/quality/internals/: repository.py  scorer.py
survey-analysis-backend/src/quality/models/: orm.py
survey-analysis-backend/src/shared_kernel/: __init__.py  database.py  domain_types.py  llm_gateway.py
survey-analysis-backend/src/simulation/interfaces/: api.py
survey-analysis-backend/src/simulation/internals/: repository.py
survey-analysis-backend/src/simulation/models/: orm.py
survey-analysis-backend/src/visualization/interfaces/: api.py
survey-analysis-backend/tests/unit/analytics/: test_correlation.py
survey-analysis-backend/tests/unit/ingestion/: test_parser.py
survey-analysis-backend/tests/unit/quality/: test_scorer.py
survey-analysis-backend/tests/unit/simulation/: test_promotion.py
survey-analysis-backend/workers/: analytics_tasks.py  celery_app.py  simulation_tasks.py
survey-analysis-frontend/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
survey-analysis-frontend/app/: globals.css  layout.tsx  page.tsx
survey-analysis-frontend/app/analysis/: page.tsx
survey-analysis-frontend/app/analytics/: page.tsx
survey-analysis-frontend/app/chat/: page.tsx
survey-analysis-frontend/app/creation/: page.tsx
survey-analysis-frontend/app/distribution/: page.tsx
survey-analysis-frontend/app/quality/: page.tsx
survey-analysis-frontend/app/reports/: page.tsx
survey-analysis-frontend/app/responses/: page.tsx
survey-analysis-frontend/app/simulation/: page.tsx
survey-analysis-frontend/app/surveys/: page.tsx
survey-analysis-frontend/app/upload/: page.tsx
survey-analysis-frontend/lib/: api.ts  chart-capture.ts  pdf-export.ts  store.ts  utils.ts
survey-analysis-frontend/types/: index.ts
(+20 files in other folders)
